application is deployed to AWS, Cognito has been implemented, Database is still outputing results. Moving to create an issue for Checkpoint 3.

--- a/src/main/resources/cognito.properties
+++ b/src/main/resources/cognito.properties
@@ -1,7 +1,7 @@
-client.secret=12976t619a7ng9v8ldde4tbks249p6qhhmfias8aialmt8t72d7g
-client.id=6fspfh6eo3q9lqmat1bf7ptl25
-oauthURL=https://local-links.auth.us-east-2.amazoncognito.com/oauth2/token
-loginURL=https://local-links.auth.us-east-2.amazoncognito.com/login
+client.secret=d7es2vb2eofr8flbbcmjuikojiapq84p2jivn6qsji1t3radmr9
+client.id=1i659k2rl3ecprv8u516pis70o
+oauthURL=https://local-links-matc-2021.auth.us-east-2.amazoncognito.com/oauth2/token
+loginURL=https://local-links-matc-2021.auth.us-east-2.amazoncognito.com/login
 redirectURL=http://localhost:8080/LocalLinks_war/auth
 region=us-east-2
-poolId=us-east-2_JU1GQZN6e
+poolId=us-east-2_NRTBjsy3C
