--- a/src/main/resources/cognito.properties
+++ b/src/main/resources/cognito.properties
@@ -2,6 +2,6 @@ client.secret=d7es2vb2eofr8flbbcmjuikojiapq84p2jivn6qsji1t3radmr9
 client.id=1i659k2rl3ecprv8u516pis70o
 oauthURL=https://local-links-matc-2021.auth.us-east-2.amazoncognito.com/oauth2/token
 loginURL=https://local-links-matc-2021.auth.us-east-2.amazoncognito.com/login
-redirectURL=http://localhost:8080/LocalLinks_war/auth
+redirectURL=https://local-links-env-2.eba-5ej8wnzr.us-east-2.elasticbeanstalk.com/auth
 region=us-east-2
 poolId=us-east-2_NRTBjsy3C
