worked on the golfCourseResults.jsp file as well as the GolfCourseSearch servlet.  Now each golf course result has its own temperature output for its location displayed back to the user.

--- a/src/main/resources/api.properties
+++ b/src/main/resources/api.properties
@@ -1,2 +1,2 @@
 google.key=AIzaSyCZjCGg1YlbpjORMLeNB7SWd02X0XQq5uE
-weather.key=358f00cc60094145931155832212910&q=53809
+weather.key=358f00cc60094145931155832212910
