--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,8 @@ com_crashlytics_export_strings.xml
 crashlytics.properties
 crashlytics-build.properties
 fabric.properties
+
+# Resource Files
+/src/main/resources/api.properties
+/src/main/resources/cognito.properties
+/src/main/resources/hibernate.cfg.xml
